--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -1,71 +1,20 @@
-# .github/workflows/hourly.yml
-name: hourly
-
-on:
-  workflow_dispatch:
-  schedule:
-    - cron: "17 * * * *"   # every hour at :17
-
-jobs:
-  fetch-and-deploy:
-    runs-on: self-hosted
-    env:
-      LEAGUE_ID: "508419792"
-      PYTHONUNBUFFERED: "1"
-      PLAYWRIGHT_SKIP_VALIDATE_HOST_REQUIREMENTS: "1"  # we preinstalled libs
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install Python deps (no sudo)
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install playwright
-          # Browsers already installed on the host; skip download/validation
-
-      - name: Sanity check playwright
-        run: python -m playwright --version
-
-      - name: Get ESPN cookies with Playwright
-        env:
-          ESPN_USER: ${{ secrets.ESPN_USER }}
-          ESPN_PASS: ${{ secrets.ESPN_PASS }}
-        run: |
-          mkdir -p artifacts
-          python pipeline/get_espn_cookies.py --league "$LEAGUE_ID" --write-github-env "$GITHUB_ENV"
-
-      - name: Upload screenshots
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: cookies-screens
-          path: artifacts
-
-      - name: Fetch league & rosters using cookies
-        env:
-          SWID: ${{ env.SWID }}
-          ESPN_S2: ${{ env.ESPN_S2 }}
-        run: |
-          echo "Using SWID=${SWID:0:6}… ESPN_S2=${ESPN_S2:0:8}…"
-          python pipeline/fetch_league.py
-          python pipeline/fetch_rosters.py
-          python pipeline/fetch_players.py || true   # players sometimes rate-limit; don't fail whole job
-
-      - name: Commit data to docs/data
-        run: |
-          git config user.name "robot"
-          git config user.email "robot@users.noreply.github.com"
-          git add docs/data/*.json || true
-          git commit -m "robot: refresh $(date -u +'%Y-%m-%dT%H:%M:%SZ')" || echo "Nothing to commit"
-
-      - name: Deploy (GitHub Pages)
-        if: success()
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs
+    - name: Ensure pip deps (once)
+      run: |
+        python -m pip install --upgrade pip
+        pip install playwright
+    - name: Get ESPN cookies with Playwright
+      env:
+        ESPN_USER: ${{ secrets.ESPN_USER }}
+        ESPN_PASS: ${{ secrets.ESPN_PASS }}
+        PLAYWRIGHT_BROWSERS_PATH: ${{ vars.PLAYWRIGHT_BROWSERS_PATH }}
+        PLAYWRIGHT_SKIP_VALIDATE_HOST_REQUIREMENTS: ${{ vars.PLAYWRIGHT_SKIP_VALIDATE_HOST_REQUIREMENTS }}
+        ARTIFACTS_DIR: artifacts
+      run: |
+        mkdir -p artifacts
+        python pipeline/get_espn_cookies.py --league "${{ vars.LEAGUE_ID }}" --write-github-env "$GITHUB_ENV"
+    - name: Upload login screenshots (if any)
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: playwright-login
+        path: artifacts
