--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -17,21 +17,10 @@ concurrency:
   group: hourly-build
   cancel-in-progress: true
 
-defaults:
-  run:
-    shell: bash
-
 jobs:
   build:
     runs-on: [self-hosted, Linux, X64]
     timeout-minutes: 25
-    env:
-      LEAGUE_ID: ${{ vars.LEAGUE_ID || '508419792' }}
-      PLAYWRIGHT_BROWSERS_PATH: ${{ vars.PLAYWRIGHT_BROWSERS_PATH || '/home/ghrunner/.cache/ms-playwright' }}
-      PLAYWRIGHT_SKIP_VALIDATE_HOST_REQUIREMENTS: ${{ vars.PLAYWRIGHT_SKIP_VALIDATE_HOST_REQUIREMENTS || '1' }}
-      ESPN_SWID: ''
-      ESPN_S2: ''
-      SWID: ''
 
     steps:
       - name: Checkout
@@ -47,42 +36,61 @@ jobs:
       - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -r requirements.txt
           pip install --upgrade playwright cloudscraper requests pydantic
 
       - name: Ensure Chromium (no sudo)
         run: |
           python -m playwright install chromium || true
 
-      - name: Set cookies from secrets if present
+      - name: Set required environment variables
+        run: |
+          echo "LEAGUE_ID=${{ vars.LEAGUE_ID || '508419792' }}" >> $GITHUB_ENV
+          echo "PLAYWRIGHT_BROWSERS_PATH=${{ vars.PLAYWRIGHT_BROWSERS_PATH || '/home/ghrunner/.cache/ms-playwright' }}" >> $GITHUB_ENV
+          echo "PLAYWRIGHT_SKIP_VALIDATE_HOST_REQUIREMENTS=${{ vars.PLAYWRIGHT_SKIP_VALIDATE_HOST_REQUIREMENTS || '1' }}" >> $GITHUB_ENV
+
+      - name: Prefer cookie secrets if present
         if: ${{ secrets.ESPN_SWID != '' && secrets.ESPN_S2 != '' }}
         run: |
-          echo "ESPN_SWID=${{ secrets.ESPN_SWID }}" >> $GITHUB_ENV
-          echo "ESPN_S2=${{ secrets.ESPN_S2 }}" >> $GITHUB_ENV
           echo "SWID=${{ secrets.ESPN_SWID }}" >> $GITHUB_ENV
+          echo "ESPN_S2=${{ secrets.ESPN_S2 }}" >> $GITHUB_ENV
+          echo "ESPN_USER=skip" >> $GITHUB_ENV
+          echo "ESPN_PASS=skip" >> $GITHUB_ENV
 
       - name: Login to ESPN to get cookies (Playwright)
-        if: ${{ env.ESPN_SWID == '' || env.ESPN_S2 == '' }}
+        if: ${{ secrets.ESPN_SWID == '' || secrets.ESPN_S2 == '' }}
         env:
           ESPN_USER: ${{ secrets.ESPN_USER }}
           ESPN_PASS: ${{ secrets.ESPN_PASS }}
         run: |
           mkdir -p artifacts
-          python pipeline/get_espn_cookies.py --league-id "${LEAGUE_ID}" >> $GITHUB_ENV
+          python pipeline/get_espn_cookies.py --league-id "${{ env.LEAGUE_ID }}" >> $GITHUB_ENV
 
       - name: Verify cookies
         run: |
-          : "${ESPN_S2:?ESPN_S2 missing}"
-          : "${SWID:?SWID missing}"
+          : "${{ env.ESPN_S2:?ESPN_S2 missing}}"
+          : "${{ env.SWID:?SWID missing}}"
           echo "Cookies present."
 
       - name: Fetch players
+        env:
+          SWID: ${{ env.SWID }}
+          ESPN_S2: ${{ env.ESPN_S2 }}
+          LEAGUE_ID: ${{ env.LEAGUE_ID }}
         run: python pipeline/fetch_players.py
 
       - name: Fetch league
+        env:
+          SWID: ${{ env.SWID }}
+          ESPN_S2: ${{ env.ESPN_S2 }}
+          LEAGUE_ID: ${{ env.LEAGUE_ID }}
         run: python pipeline/fetch_league.py
 
       - name: Fetch rosters
+        env:
+          SWID: ${{ env.SWID }}
+          ESPN_S2: ${{ env.ESPN_S2 }}
+          LEAGUE_ID: ${{ env.LEAGUE_ID }}
         run: python pipeline/fetch_rosters.py
 
       - name: Commit JSON updates
