--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -4,12 +4,6 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '9 * * * *'
-  push:
-    branches:
-      - main
-    paths:
-      - 'pipeline/**'
-      - 'docs/**'
 
 jobs:
   build-and-commit-data:
@@ -19,8 +13,6 @@ jobs:
       LEAGUE_ID: ${{ vars.LEAGUE_ID }}
       ESPN_USER: ${{ secrets.ESPN_USER }}
       ESPN_PASS: ${{ secrets.ESPN_PASS }}
-      ESPN_SWID: ${{ secrets.ESPN_SWID }}
-      ESPN_S2: ${{ secrets.ESPN_S2 }}
       PLAYWRIGHT_BROWSERS_PATH: /home/ghrunner/.cache/ms-playwright
       PLAYWRIGHT_SKIP_VALIDATE_HOST_REQUIREMENTS: 1
 
@@ -55,30 +47,8 @@ jobs:
       - name: Ensure Chromium Browser is Installed
         run: python -m playwright install chromium
 
-      - name: Fetch All Fantasy Data
-        id: fetch_data
-        run: |
-          # Dynamically find the pipeline directory to ensure the path is correct
-          PIPELINE_DIR=$(find . -type d -name "pipeline" | head -n 1)
-          echo "Found pipeline directory at: ${PIPELINE_DIR}"
-
-          if [ -z "${PIPELINE_DIR}" ]; then
-            echo "::error::Could not find the 'pipeline' directory."
-            exit 1
-          fi
-
-          # If SWID/S2 secrets are not provided, try to get them with Playwright
-          if [ -z "$ESPN_SWID" ] || [ -z "$ESPN_S2" ]; then
-            echo "SWID/S2 secrets not found. Running Playwright to log in..."
-            python "${PIPELINE_DIR}/get_espn_cookies.py"
-          else
-            echo "SWID/S2 secrets found. Skipping Playwright login."
-          fi
-          
-          # Run the data fetchers using the dynamically found absolute path
-          python "${PIPELINE_DIR}/fetch_league.py"
-          python "${PIPELINE_DIR}/fetch_rosters.py"
-          python "${PIPELINE_DIR}/fetch_players.py"
+      - name: Fetch All Data Using Only Playwright
+        run: python ${{ github.workspace }}/pipeline/fetch_all_with_playwright.py
 
       - name: Commit data files
         uses: stefanzweifel/git-auto-commit-action@v5
